--- a/UI/signup.html
+++ b/UI/signup.html
@@ -15,7 +15,7 @@
         <ul class="nav navContainer navEnd">
             <li><a href="#">Home</a></li>
             <li><a href="#">Requests</a></li>
-            <li><a href="signup.html">Sign up</a></li>
+            <li><a href="signin.html">Sign in</a></li>
         </ul>
     </nav>
     <h1 class="text-center" id= "logo">M-tracker</h1>
@@ -23,6 +23,14 @@
 <div class="container">
     <form>
       <ul class="flex-outer">
+        <li>
+          <label for="first-name">First Name</label>
+          <input type="text" id="first-name" placeholder="First name">
+        </li>
+        <li>
+          <label for="last-name">Last Name</label>
+          <input type="text" id="last-name" placeholder="Last name">
+        </li>
         <li>
           <label for="email">Email</label>
           <input type="email" id="email" placeholder="Email">
@@ -34,7 +42,7 @@
         
         
         <li>
-          <button type="submit">Sign in</button>
+          <button type="submit">Sign up</button>
         </li>
       </ul>
     </form>
