--- a/UI/signin.html
+++ b/UI/signin.html
@@ -10,10 +10,10 @@
 <body>
     <nav role="navigation" class="navContainer">
         <ul class="nav navItem navStart">
-            <li><a href="#">M-Tracker</a></li>
+            <li><a href="index.html">M-Tracker</a></li>
         </ul>
         <ul class="nav navContainer navEnd">
-            <li><a href="#">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="#">Requests</a></li>
             <li><a href="signup.html">Sign up</a></li>
         </ul>
