--- a/UI/signup.html
+++ b/UI/signup.html
@@ -19,7 +19,7 @@
         </ul>
     </nav>
     <h1 class="text-center" id= "logo">M-tracker</h1>
-    <h3 class="text-center">Please provide your login details</h3>
+    <h3 class="text-center">Please provide your details to create account</h3>
 <div class="container">
     <form>
       <ul class="flex-outer">
