[Feature 157658026] add see detail feature

--- a/UI/signup.html
+++ b/UI/signup.html
@@ -4,6 +4,7 @@
 <title>M-Tracker</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0" shrink-to-fit=no">
 <link href="css/main.css" rel="stylesheet" />
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="css/font-awesome.min.css"/>
 <link href="css/normalize.css" rel="stylesheet" />
 </head>
@@ -14,7 +15,7 @@
         </ul>
         <ul class="nav navContainer navEnd">
             <li><a href="#">Home</a></li>
-            <li><a href="#">Requests</a></li>
+            <li><a href="#">Add Request</a></li>
             <li><a href="signin.html">Sign in</a></li>
         </ul>
     </nav>
