--- a/UI/index.html
+++ b/UI/index.html
@@ -11,10 +11,10 @@
 <body>
     <nav role="navigation" class="navContainer">
         <ul class="nav navItem navStart">
-            <li><a href="#">M-Tracker</a></li>
+            <li><a href="index.html">M-Tracker</a></li>
         </ul>
         <ul class="nav navContainer navEnd">
-            <li><a href="#">Add Request</a></li>
+            <li><a href="addrequest.html">Add Request</a></li>
             <li><a href="signin.html">Sign in</a></li>
             <li><a href="signup.html">Sign up</a></li>
         </ul>
