--- a/UI/signup.html
+++ b/UI/signup.html
@@ -11,11 +11,11 @@
 <body>
     <nav role="navigation" class="navContainer">
         <ul class="nav navItem navStart">
-            <li><a href="#">M-Tracker</a></li>
+            <li><a href="index.html">M-Tracker</a></li>
         </ul>
         <ul class="nav navContainer navEnd">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Add Request</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="addrequest.html">Add Request</a></li>
             <li><a href="signin.html">Sign in</a></li>
         </ul>
     </nav>
