--- a/UI/detail.html
+++ b/UI/detail.html
@@ -14,7 +14,7 @@
             <li><a href="index.html">M-Tracker</a></li>
         </ul>
         <ul class="nav navContainer navEnd">
-            <li><a href="#">Add Request</a></li>
+            <li><a href="addrequest.html">Add Request</a></li>
             <li><a href="signin.html">Sign in</a></li>
             <li><a href="signup.html">Sign up</a></li>
         </ul>
@@ -39,3 +39,4 @@
       </div>
   </body>
   </html>
+  <footer><p class="text-center">&copy; M-tracker.com</p></footer>
