--- a/UI/index.html
+++ b/UI/index.html
@@ -20,9 +20,9 @@
         </ul>
     </nav>
     <div class="welcome-div">
-    <h1 class="text-center" id= "logo">M-tracker</h1>
+    <h1 class="text-center" id= "home-logo">M-tracker</h1>
     <h3 class="text-center">Make your repair request fast </h3>
-  </div>
+  </div><br /><hr />
     <div id="home-dropdown">
       <p>Choose the category of fault to view</p>
         <form>
@@ -36,7 +36,7 @@
             <option value="Last 7 days">Last 7 days</option>
             <option value="Last month">Last month</option>
             <option value="Approved">Approved</option>
-            <option value="Disapproved">Disapproved 7 days</option>
+            <option value="Disapproved">Disapproved</option>
             <option value="Resolved">Resolved</option>
             </select>
         </form>
@@ -103,6 +103,16 @@
             </div>
         
       </div>
+      <hr />
+      <!-- <ul class="footer-media">
+        <li>Follow us</li>
+        <li><i class="fa fa-facebook-square"></i></li>
+        <li><i class="fa fa-twitter-square"></i></li>
+        <li><i class="fa fa-linkedin-square"></i></li>
+        <li><i class="fa fa-instagram-square"></i></li>
+        <li><i class="fa fa-youtube-square"></i></li>
+    </ul> -->
 </body>
 </html>
+<footer><p class="text-center">&copy; M-tracker.com</p></footer>
 
