--- a/UI/signin.html
+++ b/UI/signin.html
@@ -4,8 +4,6 @@
 <title>M-Tracker</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0" shrink-to-fit=no">
 <link href="css/main.css" rel="stylesheet" />
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" href="css/font-awesome.min.css"/>
 <link href="css/normalize.css" rel="stylesheet" />
 </head>
 <body>
@@ -15,7 +13,7 @@
         </ul>
         <ul class="nav navContainer navEnd">
             <li><a href="index.html">Home</a></li>
-            <li><a href="#">Add Request</a></li>
+            <li><a href="addrequest.html">Add Request</a></li>
             <li><a href="signup.html">Sign up</a></li>
         </ul>
     </nav>
@@ -35,7 +33,7 @@
         
         
         <li>
-          <button type="submit">Sign in</button>
+          <button id="fit-footer" type="submit">Sign in</button>
         </li>
       </ul>
     </form>
