[bug #157921454] improve UI

--- a/UI/detail.html
+++ b/UI/detail.html
@@ -5,7 +5,6 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0" shrink-to-fit=no">
 <link href="css/main.css" rel="stylesheet" />
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" href="css/font-awesome.min.css"/>
 <link href="css/normalize.css" rel="stylesheet" />
 </head>
 <body>
@@ -19,11 +18,11 @@
             <li><a href="signup.html">Sign up</a></li>
         </ul>
     </nav>
-    <div class="cards show-detail-card">
+    <div id="detail-card" class="cards show-detail-card">
       <div class="card">
-        <img src="image/repair2.png">
+        <img src="image/electrical.jpg">
         <div class="card-content">
-        <h3>Burnt cable</h3>
+        <h3>Electrical Fault&nbsp;&nbsp;<i class="fa fa-thumbs-down"></i></h3>
           </div>
       </div>
       </div>
