--- a/UI/detail.html
+++ b/UI/detail.html
@@ -18,24 +18,26 @@
             <li><a href="signup.html">Sign up</a></li>
         </ul>
     </nav>
-    <div id="detail-card" class="cards show-detail-card">
+    <div id="detail-card" class="show-detail-card">
       <div class="card">
         <img src="image/electrical.jpg">
         <div class="card-content">
-        <h3>Electrical Fault&nbsp;&nbsp;<i class="fa fa-thumbs-down"></i></h3>
+        <h3 id="title-label">Electrical Fault&nbsp;&nbsp;<i class="fa fa-thumbs-down"></i></h3>
           </div>
       </div>
       </div>
-        <p class="description-label">Description:</p> <p class="description-p">We have a serious electrical fault in the director's office, power is down, there is no light, everywhere is dark. We need a quick fix to it. please treat as urgent</p>
-        <p class="description-label">Date:</p><p class="description-p">12-12-2018</p>
-      <div class="description-btn">
+        <p class="description-label">Description:</p> <p id="description-label" class="description-p">We have a serious electrical fault in the director's office, power is down, there is no light, everywhere is dark. We need a quick fix to it. please treat as urgent</p>
+        <p class="description-label">Category:</p> <p id="category-label" class="description-p">Electrical</p>
+        <p class="description-label">Date:</p><p id="date-label" class="description-p">12-12-2018</p>
+        <div class="description-btn">
         <select>
             <option value="Approve">Approve</option>
             <option value="Disapprove">Disapprove</option>
             <option value="Resolve">Resolve</option>
         </select>
-        <button>Submit</button>
+        <button id="edit-btn" >Edit</button>
       </div>
   </body>
   </html>
   <footer><p class="text-center">&copy; M-tracker.com</p></footer>
+  
