--- a/UI/signin.html
+++ b/UI/signin.html
@@ -17,8 +17,10 @@
             <li><a href="signup.html">Sign up</a></li>
         </ul>
     </nav>
-    <h1 class="text-center" id= "logo">M-tracker</h1>
-    <h3 class="text-center">Please provide your login details</h3>
+    <h1 class="text-center" id= "logo">M-Tracker</h1>
+    <p class="text-center" id="welcome-text">We handle repair or maintenance request the finest and fastest way</p>
+    <div class="form-container">
+    <h3 class="text-center" id ="login-text">Provide your login details</h3>
 <div class="container">
     <form>
       <ul class="flex-outer">
@@ -36,5 +38,7 @@
       </ul>
     </form>
   </div>
+    </div>
+    <p class="text-center">All rights reserved. M-tracker &copy;2018</p>
 </body>
 </html>
