--- a/UI/signup.html
+++ b/UI/signup.html
@@ -17,8 +17,10 @@
             <li><a href="signin.html">Sign in</a></li>
         </ul>
     </nav>
-    <h1 class="text-center" id= "logo">M-tracker</h1>
-    <h3 class="text-center">Please provide your details to create account</h3>
+    <h1 class="text-center" id= "logo">M-Tracker</h1>
+    <p class="text-center" id="welcome-text">We handle repair or maintenance request the finest and fastest way</p>
+    <div class="form-container">
+    <h3 class="text-center" id ="login-text">Create an account with us</h3>
 <div class="container">
     <form>
       <ul class="flex-outer">
@@ -46,5 +48,7 @@
       </ul>
     </form>
   </div>
+  </div>
+  <p class="text-center">All rights reserved. M-tracker &copy;2018</p>
 </body>
 </html>
