feat(client): implement user get all requests
- add get all request feature for user
- consume backend's associated endpoint

[Finishes #157966780]

--- a/client/list.html
+++ b/client/list.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>M-Tracker</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" shrink-to-fit=no">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link href="css/main.css" rel="stylesheet" />
-<link href="css/normalize.css" rel="stylesheet" />
+  <link href="assets/css/main.css" rel="stylesheet" />
+<link href="assets/css/normalize.css" rel="stylesheet" />
 </head>
 <body>
     <nav role="navigation" class="navContainer">
@@ -19,10 +20,10 @@
           <a href="index.html">Home</a>
         </li>
         <li>
-          <a href="addrequest.html">Add Request</a>
+          <a href="addrequest.html">Add New</a>
         </li>
         <li>
-          <a href="signup.html">Sign up</a>
+          <a href="signup.html">Sign Up</a>
         </li>
       </ul>
     </nav>
@@ -66,9 +67,8 @@
       </div>
     <table>
       <tr><th>Title</th><th>Description</th><th>Category</th><th>Date</th><th>Status</th></tr>
-      <tr><td><a href="detail.html">Faulty fan</a></td><td>The ceiling fan is not working do something please...</td><td>Electrical</td><td>2018-06-01</td><td>Approved</td></tr>
-      <tr><td><a href="detail.html">Faulty fan</a></td><td>The ceiling fan is not working do something please. there will always be a way...</td><td>Electrical</td><td>2018-06-01</td><td>Pending</td></tr>
-      <tr><td><a href="detail.html">Faulty fan</a></td><td>The ceiling fan is not working do something please...</td><td>Mechanical</td><td>2018-06-01</td><td>Resolved</td></tr>
     </table>
+    
+    <script src="list.js"></script>
   </body>
   </html>
