--- a/client/signin.html
+++ b/client/signin.html
@@ -17,12 +17,14 @@
             <li><a href="signup.html">Sign up</a></li>
         </ul>
     </nav>
-    <h1 class="text-center" id= "logo">M-tracker</h1>
-    <h3 class="text-center">Please provide your login details</h3>
+    <h1 class="text-center" id= "logo">M-Tracker</h1>
+    <p class="text-center" id="welcome-text">We handle repair or maintenance request the finest and fastest way</p>
+    <div class="form-container">
+    <h3 class="text-center" id ="login-text">Provide your login details</h3>
 <div class="container">
-    <p id = "messageText" ></p>
     <form>
       <ul class="flex-outer">
+          <p id = "messageText" ></p>
         <li>
           <label for="email">Email</label>
           <input type="email" id="email" placeholder="Email">
@@ -37,6 +39,8 @@
       </ul>
     </form>
   </div>
-  <script src="signin.js"></script>
+    </div>
+    <p class="text-center">All rights reserved. M-tracker &copy;2018</p>
+    <script src="signin.js"></script>
 </body>
 </html>
