feat(client): implement user get a requests
- add get a request feature for user
- consume backend's associated endpoint

[Finishes #157997800]

--- a/client/detail.html
+++ b/client/detail.html
@@ -3,9 +3,9 @@
 <head>
 <title>M-Tracker</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0" shrink-to-fit=no">
-<link href="css/main.css" rel="stylesheet" />
+<link href="assets/css/main.css" rel="stylesheet" />
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-<link href="css/normalize.css" rel="stylesheet" />
+<link href="assets/css/normalize.css" rel="stylesheet" />
 </head>
 <body>
     <nav role="navigation" class="navContainer">
@@ -20,15 +20,15 @@
     </nav>
     <div id="detail-card" class="show-detail-card">
       <div class="display-card">
-        <img src="image/electrical.jpg">
+        <img src="assets/image/repair2.png">
         <div class="card-content">
-        <h3 id="title-label">Electrical Fault&nbsp;&nbsp;<i class="fa fa-thumbs-down"></i></h3>
+        <h3 id="title-label"></h3>
           </div>
       </div>
       </div>
-        <p class="description-label">Description:</p> <p id="description-label" class="description-p">We have a serious electrical fault in the director's office, power is down, there is no light, everywhere is dark. We need a quick fix to it. please treat as urgent</p>
-        <p class="description-label">Category:</p> <p id="category-label" class="description-p">Electrical</p>
-        <p class="description-label">Date:</p><p id="date-label" class="description-p">12-12-2018</p>
+        <p class="description-label">Description:</p> <p id="description-label" class="description-p">No description found</p>
+        <p class="description-label">Category:</p> <p id="category-label" class="description-p">General</p>
+        <p class="description-label">Date:</p><p id="date-label" class="description-p">No date found</p>
         <div class="description-btn">
         <select>
             <option value="Approve">Approve</option>
@@ -37,6 +37,7 @@
         </select>
         <button id="edit-btn" >Edit</button>
       </div>
+      <script src="detail.js" ></script>
   </body>
   </html>
   <footer><p class="text-center">&copy; M-tracker.com</p></footer>
