feat(client): implement status update
- enable admin approve request feature
- enable admin disapprove request feature
- enable admin resolve request feature
- improve app navigation

[Finishes #157997789]

--- a/client/addrequest.html
+++ b/client/addrequest.html
@@ -4,6 +4,7 @@
 <title>M-Tracker</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0" shrink-to-fit=no">
 <link href="assets/css/main.css" rel="stylesheet" />
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 <link href="assets/css/normalize.css" rel="stylesheet" />
 </head>
 <body>
@@ -12,10 +13,11 @@
             <li><a href="index.html">M-Tracker</a></li>
         </ul>
         <ul class="nav navContainer navEnd">
-            <li><a href="list.html">View Request</a></li>
+            <li><a href="list.html">View</a></li>
             <li><a href="signup.html">Sign up</a></li>
         </ul>
     </nav>
+    <p id="userWelcomeText"><i class="fa fa-user-circle"></i>&nbsp;Logged in as</p>
     <h2 id="addrequest-h2" class="text-center">Have you got a fault? Tell us about it</h2>
     <div class="show-detail-card">
           <img src="assets/image/repair2.png">
