--- a/client/list.html
+++ b/client/list.html
@@ -23,10 +23,11 @@
           <a href="addrequest.html">Add New</a>
         </li>
         <li>
-          <a href="signup.html">Sign Up</a>
+          <a href="index.html">Sign Out</a>
         </li>
       </ul>
     </nav>
+    <p id="userWelcomeText"><i class="fa fa-user-circle"></i>&nbsp;Logged in as</p>
     <p class="text-center" id="request-header">All Requests</p>
     <div id="sort-by">
         <ul class="status-item status-start">
