--- a/client/index.html
+++ b/client/index.html
@@ -13,7 +13,7 @@
             <li><a href="index.html">M-Tracker</a></li>
         </ul>
         <ul class="nav navContainer navEnd">
-            <li><a href="addrequest.html">Add Request</a></li>
+            <li><a href="#"></a></li>
             <li><a href="signin.html">Sign in</a></li>
             <li><a href="signup.html">Sign up</a></li>
         </ul>
