--- a/client/signin.html
+++ b/client/signin.html
@@ -13,7 +13,7 @@
         </ul>
         <ul class="nav navContainer navEnd">
             <li><a href="index.html">Home</a></li>
-            <li><a href="addrequest.html">Add Request</a></li>
+            <li><a href="#"></a></li>
             <li><a href="signup.html">Sign up</a></li>
         </ul>
     </nav>
