--- a/client/addrequest.html
+++ b/client/addrequest.html
@@ -14,7 +14,7 @@
         </ul>
         <ul class="nav navContainer navEnd">
             <li><a href="list.html">View</a></li>
-            <li><a href="signup.html">Sign up</a></li>
+            <li><a href="signup.html">Sign Out</a></li>
         </ul>
     </nav>
     <p id="userWelcomeText"><i class="fa fa-user-circle"></i>&nbsp;Logged in as</p>
