feat(client): implement admin get all requests
- enable admin to get all requests
- enable admin to see detail of a request

[Finishes #158289187]

--- a/client/list.html
+++ b/client/list.html
@@ -59,6 +59,7 @@
                     <select name="category-dropdown">
                     <option value="" selected>category</option>
                     <option value="">All</option>
+                    <option value="General">general</option>
                     <option value="Electrical">electrical</option>
                     <option value="Physical">physical</option>
                     <option value="Mechanical">mechanical</option>
