--- a/client/addrequest.html
+++ b/client/addrequest.html
@@ -26,7 +26,7 @@
         </div>
         <div id="file-div">
             <label> Choose File ...
-                <input type="file" id="File" accept="image/*" >
+                <input type="file" id="file-upload" name="request" accept="image/*" >
             </label>
         
       </div>
