fix(client): truncate long description
- truncate description when a limit is exceeded on the list page
- show character count on add new request

[Finishes #158410256]

--- a/client/addrequest.html
+++ b/client/addrequest.html
@@ -33,10 +33,12 @@
       <div class="category-div">
       <p class="category-p-textarea">Title</p><input id = "title-input" placeholder="Title"</input>
       </div>
+      <p class="counter"></p>
       <div class="textarea-div">
       <p class="description-p-textarea">Description</p>
       <textarea id="description-input" rows="9" cols="25" placeholder="...write detailed description of the fault"></textarea>
       </div>
+      <p class="counter"></p>
       <div class="category-div">
       <p class="category-p-textarea">Category</p>
       <form>
