feat(client, server): Implement delete request
- enable deletion of a request by the author
- add test for deletion of a request

[Finishes #158454277]

--- a/client/detail.html
+++ b/client/detail.html
@@ -37,7 +37,8 @@
             <option value="disapprove">Disapprove</option>
             <option value="resolve">Resolve</option>
         </select>
-        <button id="edit-btn" >Edit Request</button>
+        <button id="edit-btn" >Edit</button>
+        <button id="delete-btn" >Delete</button>
       </div>
       <script src="detail.js" ></script>
   </body>
