--- a/client/index.html
+++ b/client/index.html
@@ -13,7 +13,6 @@
             <li><a href="index.html">M-Tracker</a></li>
         </ul>
         <ul class="nav navContainer navEnd">
-            <li><a href="#"></a></li>
             <li><a href="signin.html">Sign in</a></li>
             <li><a href="signup.html">Sign up</a></li>
         </ul>
@@ -65,6 +64,7 @@
 </div> 
 <p class="text-center styled-text" >....We handle repair or maintenance request the finest and fastest way</p>
 <div id="get-started"><a href="signup.html">GET STARTED</a></div>
+<script src="index.js"></script>
 </body>
 </html>
 <footer><p class="text-center">&copy; M-tracker.com</p></footer>
