--- a/client/detail.html
+++ b/client/detail.html
@@ -27,9 +27,11 @@
           </div>
       </div>
       </div>
+      <div class="addrequest-form">
         <p class="description-label">Description:</p> <p id="description-label" class="description-p">No description found</p>
         <p class="description-label">Category:</p> <p id="category-label" class="description-p">General</p>
         <p class="description-label">Date:</p><p id="date-label" class="description-p">No date found</p>
+      </div>
         <p id = "messageText" ></p>
         <div class="description-btn">
         <select>
