--- a/client/index.html
+++ b/client/index.html
@@ -22,6 +22,7 @@
     <h3 class="text-center">Make your repair request fast </h3>
   </div><br />
   <p class="text-center" id="how-it-works">~ How it works ~</p>
+  <div class="lightly-darker-container">
 <div class="cards">
   <div class="card">
     <div class="mini-card-text"><i class="fa fa-eye"></i></div>
@@ -29,7 +30,6 @@
       <h3><a href="detail.html">You see<br />a fault</a></h3>
         </div>
     </div>
-
     <div class="card">
         <div class="mini-card-text"><i class="fa fa-envelope"></i></div>
         <div class="card-content">
@@ -50,6 +50,8 @@
               </div>
           </div>
   </div>
+</div>
+  <div class="lightly-dark-container">
   <p class="text-center" id="status-header">~ Monitor Your Request ~</p>
   <div class="status-div">
         <p class="text-center underline">Your request can either be</p>
@@ -62,8 +64,11 @@
         <li>Resolved&nbsp;&nbsp;<i class="fa fa-check"></i></li>
     </ul>
 </div> 
+  </div>
+<div class="lightly-darker-container">
 <p class="text-center styled-text" >....We handle repair or maintenance request the finest and fastest way</p>
 <div id="get-started"><a href="signup.html">GET STARTED</a></div>
+</div>
 <script src="index.js"></script>
 </body>
 </html>
