--- a/client/list.html
+++ b/client/list.html
@@ -29,10 +29,10 @@
     </nav>
     <p id="userWelcomeText"><i class="fa fa-user-circle"></i>&nbsp;Logged in as</p>
     <p class="text-center" id="request-header">All Requests</p>
-    <div id="sort-by">
+    <div id="filter-by">
         <ul class="status-item status-start">
             <li>
-                <form id="sort-date">
+                <form id="filter-date">
                     <button>From:</button>
                 <input type="date" name="dated"min="2017-01-01" max="2099-12-31"><br>
               </form>
@@ -40,7 +40,7 @@
           </ul>
           <ul class="status-container status-end">
             <li>
-                <button>Sort by:</button>               
+                <button>Filter by:</button>               
             </li>
             <li>
                 <form>
