--- a/client/signup.html
+++ b/client/signup.html
@@ -22,7 +22,7 @@
     <div class="form-container">
     <h3 class="text-center" id ="login-text">Create an account with us</h3>
 <div class="container">
-    <form>
+    <form id="signup-form">
       <ul class="flex-outer">
           <p id = "messageText" ></p>
         <li>
