feat(client, server, ui): Implement password reset
- add "forgot password" interface
- enable email for password reset
- enable password reset through generated token

[Finishes #158661687]

--- a/client/index.html
+++ b/client/index.html
@@ -69,8 +69,37 @@
 <p class="text-center styled-text" >....We handle repair or maintenance request the finest and fastest way</p>
 <div id="get-started"><a href="signup.html">GET STARTED</a></div>
 </div>
+<footer id="fix-footer">
+    <div class="social">
+      <a id="documentation" href="api-docs">Documentation</a>
+      <ul>
+        <li id="social-label">
+          <p>Find us:</p>
+        </li>
+        <li>
+          <a href="#">
+            <i class="fa fa-facebook-square"></i>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <i class="fa fa-twitter-square"></i>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <i class="fa fa-linkedin-square"></i>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <i class="fa fa-instagram"></i>
+          </a>
+        </li>
+      </ul>
+    </div>
+    <p class="text-center">&copy; M-tracker.com </p>
+  </footer>
 <script src="index.js"></script>
 </body>
 </html>
-<footer><p class="text-center">&copy; M-tracker.com</p></footer>
-
