--- a/client/signup.html
+++ b/client/signup.html
@@ -26,19 +26,19 @@
       <ul class="flex-outer">
           <p id = "messageText" ></p>
         <li>
-          <label for="first-name">First Name</label>
+          <label for="first-name">First Name<span class="red-text">*</span></label>
           <input type="text" id="first-name" placeholder="First name">
         </li>
         <li>
-          <label for="last-name">Last Name</label>
+          <label for="last-name">Last Name<span class="red-text">*</span></label>
           <input type="text" id="last-name" placeholder="Last name">
         </li>
         <li>
-          <label for="email">Email</label>
+          <label for="email">Email<span class="red-text">*</span></label>
           <input type="email" id="email" placeholder="Email">
         </li>
         <li>
-          <label for="password">Password</label>
+          <label for="password">Password<span class="red-text">*</span></label>
           <input type="password" id="password" placeholder="Password">
         </li>
         
