--- a/client/addrequest.html
+++ b/client/addrequest.html
@@ -58,7 +58,37 @@
     <div id="request-btn">
         <button>Submit</button>
       </div>
+    <footer id="fix-footer">
+    <div class="social">
+      <a id="documentation" href="api-docs">Documentation</a>
+      <ul>
+        <li id="social-label">
+          <p>Find us:</p>
+        </li>
+        <li>
+          <a href="#">
+            <i class="fa fa-facebook-square"></i>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <i class="fa fa-twitter-square"></i>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <i class="fa fa-linkedin-square"></i>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <i class="fa fa-instagram"></i>
+          </a>
+        </li>
+      </ul>
+    </div>
+    <p class="text-center">&copy; M-tracker.com </p>
+  </footer>
       <script src="addrequest.js"></script>
   </body>
   </html>
-  <footer><p class="text-center">&copy; M-tracker.com</p></footer>
