--- a/client/list.html
+++ b/client/list.html
@@ -27,49 +27,51 @@
         </li>
       </ul>
     </nav>
+    <div class="wrapper" >
     <p id="userWelcomeText"><i class="fa fa-user-circle"></i>&nbsp;Logged in as</p>
     <p class="text-center" id="request-header">All Requests</p>
     <div id="filter-by">
-        <ul class="status-item status-start">
-            <li>
-                <form id="filter-date">
-                    <button>From:</button>
-                <input type="date" name="dated"min="2017-01-01" max="2099-12-31"><br>
-              </form>
-            </li>
-          </ul>
-          <ul class="status-container status-end">
-            <li>
-                <button>Filter by:</button>               
-            </li>
-            <li>
-                <form>
-                    <select name="status-dropdown">
-                    <option value="">All</option>
-                    <option value="approved">approved</option>
-                    <option value="disapproved">disapproved</option>
-                    <option value="resolved">resolved</option>
-                    <option value="pending">pending</option>
-                    <option value="" selected>status</option>
-                    </select>
-                </form>
-            </li>
-            <li>
-                <form>
-                    <select name="category-dropdown">
-                    <option value="">All</option>
-                    <option value="general">general</option>
-                    <option value="electrical">electrical</option>
-                    <option value="physical">physical</option>
-                    <option value="mechanical">mechanical</option>
-                    <option value="electronic">electronic</option>
-                    <option value="software">software</option>
-                    <option value="" selected>category</option>
-                    </select>
-                </form>
-            </li>
-          </ul>
-      </div>
+      <ul class="status-item status-start">
+        <li>
+          <form id="filter-date">
+            <button>From:</button>
+            <input type="date" name="dated" min="2017-01-01" max="2099-12-31">
+            <br>
+          </form>
+        </li>
+      </ul>
+      <ul class="status-container status-end">
+        <li>
+          <button>Filter by:</button>
+        </li>
+        <li>
+          <form>
+            <select name="status-dropdown">
+              <option value="">All</option>
+              <option value="approved">approved</option>
+              <option value="disapproved">disapproved</option>
+              <option value="resolved">resolved</option>
+              <option value="pending">pending</option>
+              <option value="" selected>status</option>
+            </select>
+          </form>
+        </li>
+        <li>
+          <form>
+            <select name="category-dropdown">
+              <option value="">All</option>
+              <option value="general">general</option>
+              <option value="electrical">electrical</option>
+              <option value="physical">physical</option>
+              <option value="mechanical">mechanical</option>
+              <option value="electronic">electronic</option>
+              <option value="software">software</option>
+              <option value="" selected>category</option>
+            </select>
+          </form>
+        </li>
+      </ul>
+    </div>
       <p class = "text-center" id="filter-message"></p>
       <div class = "loader"></div>
     <table>
@@ -79,6 +81,38 @@
       <button disabled><i class="fa fa-arrow-circle-left"></i> Prev</button>
       <button>Next <i class="fa fa-arrow-circle-right"></i> </button>
     </div>
-    <script src="list.js"></script>
-  </body>
+    </div>
+  <script src="list.js"></script>
+  <footer id="fix-footer">
+    <div class="social">
+      <a id="documentation" href="api-docs">Documentation</a>
+      <ul>
+        <li id="social-label">
+          <p>Find us:</p>
+        </li>
+        <li>
+          <a href="#">
+            <i class="fa fa-facebook-square"></i>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <i class="fa fa-twitter-square"></i>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <i class="fa fa-linkedin-square"></i>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <i class="fa fa-instagram"></i>
+          </a>
+        </li>
+      </ul>
+    </div>
+    <p class="text-center">&copy; M-tracker.com </p>
+  </footer>
+</body>
   </html>
