--- a/client/signin.html
+++ b/client/signin.html
@@ -8,30 +8,30 @@
 <link href="assets/css/normalize.css" rel="stylesheet" />
 </head>
 <body>
-    <nav role="navigation" class="navContainer">
-        <ul class="nav navItem navStart">
+    <nav role="navigation" className="navContainer">
+        <ul className="nav navItem navStart">
             <li><a href="index.html">M-Tracker</a></li>
         </ul>
-        <ul class="nav navContainer navEnd">
+        <ul className="nav navContainer navEnd">
             <li><a href="index.html">Home</a></li>
             <li><a href="#"></a></li>
             <li><a href="signup.html">Sign up</a></li>
         </ul>
     </nav>
-    <h1 class="text-center" id= "logo">M-Tracker</h1>
-    <p class="text-center" id="welcome-text">We handle repair or maintenance request the finest and fastest way</p>
-    <div class="form-container">
-    <h3 class="text-center" id ="login-text">Provide your login details</h3>
-<div class="container">
+    <h1 className="text-center" id= "logo">M-Tracker</h1>
+    <p className="text-center" id="welcome-text">We handle repair or maintenance request the finest and fastest way</p>
+    <div className="form-container">
+    <h3 className="text-center" id ="login-text">Provide your login details</h3>
+<div className="container">
     <form>
-      <ul class="flex-outer">
+      <ul className="flex-outer">
           <p id = "messageText" ></p>
         <li>
-          <label for="email">Email<span class="red-text">*</span></label>
+          <label for="email">Email<span className="red-text">*</span></label>
           <input type="email" id="email" placeholder="Email">
         </li>
         <li>
-          <label for="password">Password<span class="red-text">*</span></label>
+          <label for="password">Password<span className="red-text">*</span></label>
           <input type="password" id="password" placeholder="Password">
         </li>
         <li>
@@ -44,22 +44,22 @@
     </form>
   </div>
     </div>
-    <div class="modal">
-        <div class="modal-content clearfix"> 
-            <div class="close">&times;</div>
+    <div className="modal">
+        <div className="modal-content clearfix"> 
+            <div className="close">&times;</div>
             <h4>Password Recovery</h4> 
       <p>Provide the email address you registered with</p>
-          <div class="email-container">
+          <div className="email-container">
             <form>
-             &nbsp;<i class="fa fa-user"></i>&nbsp; <input type="email" id="modal-email" placeholder="Email" autofocus>
+             &nbsp;<i className="fa fa-user"></i>&nbsp; <input type="email" id="modal-email" placeholder="Email" autofocus>
           </div>
-          <p class="text-center"><small> We will send you a link to reset your password</small></p>
-          <p id = "modal-messageText" class="text-center" ></p>
+          <p className="text-center"><small> We will send you a link to reset your password</small></p>
+          <p id = "modal-messageText" className="text-center" ></p>
           <button id="modal-btn" type="submit">Submit</button>
         </form>
       </div>
     </div>
-    <p class="text-center">All rights reserved. M-tracker &copy;2018</p>
+    <p className="text-center">All rights reserved. M-tracker &copy;2018</p>
     <script src="signin.js"></script>
 </body>
 </html>
